# benchmark_legal_rag

./: .env.example  .gitattributes  .gitignore  README.md  pyproject.toml  requirements.txt
benchmark_rag/: logging.py  registry.py
benchmark_rag/components/: base.py
benchmark_rag/components/chunkers/: naive.py  recursive.py  semantic.py
benchmark_rag/components/embedders/: gemini.py  kanon2.py  (+1 more)
benchmark_rag/config/: schemas.py
benchmark_rag/evaluation/: metrics.py
benchmark_rag/pipeline/: indexing_pipeline.py  iterretgen_pipeline.py  rag_pipeline.py
configs/: base.yaml
configs/experiments/: gemini_recursive_1024.yaml  gemini_recursive_1024_iterretgen.yaml  gemini_recursive_4096.yaml  kanon2_recursive_1024.yaml  kanon2_recursive_1024_iterretgen.yaml  qwen_recursive_1024.yaml  qwen_recursive_1024_300.yaml  qwen_recursive_1024_iterretgen.yaml  qwen_recursive_4096.yaml  qwen_recursive_8192.yaml  smoke_test.yaml
data/: dataset_stats.py
scripts/: recompute_metrics.py  run_benchmark.py  run_indexing.py
slurm/: interactive.sh  run_gemini_recursive_1024.sbatch  run_gemini_recursive_1024_iterretgen.sbatch  run_gemini_recursive_1024_suite.sbatch  run_gemini_recursive_4096.sbatch  run_kanon2_recursive_1024.sbatch  run_kanon2_recursive_1024_iterretgen.sbatch  run_kanon2_recursive_1024_suite.sbatch  run_qwen_recursive_1024.sbatch  run_qwen_recursive_1024_300.sbatch  run_qwen_recursive_1024_iterretgen.sbatch  run_qwen_recursive_1024_suite.sbatch  run_qwen_recursive_4096.sbatch  run_qwen_recursive_8192.sbatch  smoke_test.sbatch
tests/: test_incremental_indexing.py
(+4 files in other folders)
